Ecosystem page fixed card heights to be the same on smaller screen sizes

--- a/src/scss/pages/page-ecosystem.scss
+++ b/src/scss/pages/page-ecosystem.scss
@@ -183,6 +183,7 @@
     background: #F4F4F5;
     border-radius: 12px;
     padding:30px;
+    height:100%;
     width:100%;
 
     .logo-container{
